# hivemind

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  Dockerfile  README.md  RENDER_DEPLOY.md  fly.toml  package.json  pnpm-lock.yaml  railway.json  render.yaml  tsconfig.base.json  tsconfig.json
docs/: architecture.mmd
enclave/: .gitignore  AWS_DEPLOY.md  Containerfile  DEPLOYMENT.md  Design.md  Makefile  README.md  SEAL_BOOTSTRAP.md  UsingNautilus.md  configure_enclave.sh  deny.toml  expose_enclave.sh  register_enclave.sh  reset_enclave.sh  update.sh  update_weather.sh
enclave/.github/: CODEOWNERS
enclave/.github/workflows/: move.yml  rust.yml
enclave/move/enclave/: Move.toml  README.md
enclave/move/enclave/sources/: enclave.move
enclave/move/hivemind-app/: Move.toml  Published.toml
enclave/move/hivemind-app/sources/: hivemind.move  seal_policy.move
enclave/move/seal-policy/: Move.toml
enclave/move/weather-example/: Move.toml
enclave/src/nautilus-server/: Cargo.toml  run.sh
enclave/src/nautilus-server/src/: common.rs  lib.rs  main.rs
enclave/src/nautilus-server/src/apps/hivemind/: allowed_endpoints.yaml  memwal.rs  mod.rs  seal.rs  seal_config.yaml  seal_types.rs
enclave/src/nautilus-server/src/apps/seal-example/: README.md  allowed_endpoints.yaml  endpoints.rs  mod.rs  types.rs
enclave/src/nautilus-server/src/apps/twitter-example/: allowed_endpoints.yaml  mod.rs
enclave/src/nautilus-server/src/apps/weather-example/: mod.rs
scripts/: chain-test.ts  flow1.ts  flow2.ts  namespace-test.ts  seal-test.ts
(+4 files in other folders)
